@@ -16,6 +16,8 @@
 
 package com.jayway.restassured.module.mockmvc.matcher;
 
+import com.jayway.restassured.internal.matcher.xml.XmlDtdMatcher;
+import com.jayway.restassured.internal.matcher.xml.XmlXsdMatcher;
 import com.jayway.restassured.matcher.ResponseAwareMatcher;
 import com.jayway.restassured.matcher.RestAssuredMatchers;
 import com.jayway.restassured.module.mockmvc.response.MockMvcResponse;
@@ -74,6 +76,16 @@ public class RestAssuredMockMvcMatchers {
     }
 
     /**
+     * Evaluates to true if an XML file in classpath matches the supplied XSD.
+     *
+     * @param path The path to the XSD located in classpath
+     * @return The DTD matcher
+     */
+    public static Matcher<String> matchesXsdInClasspath(String path) {
+        return XmlXsdMatcher.matchesXsdInClasspath(path);
+    }
+
+    /**
      * Evaluates to true if an XML string matches the supplied DTD.
      *
      * @param dtd The DTD to match
@@ -111,6 +123,16 @@ public class RestAssuredMockMvcMatchers {
      */
     public static Matcher<String> matchesDtd(URL url) {
         return RestAssuredMatchers.matchesDtd(url);
+    }
+
+    /**
+     * Evaluates to true if an XML file in classpath matches the supplied DTD.
+     *
+     * @param path The path to the DTD file in classpath
+     * @return The DTD matcher
+     */
+    public static Matcher<String> matchesDtdInClasspath(String path) {
+        return XmlDtdMatcher.matchesDtdInClasspath(path);
     }
 
     /**
