@@ -15,11 +15,11 @@
  */
 
 
-
 package com.jayway.restassured.internal.matcher.xml
 
 import org.hamcrest.BaseMatcher
 import org.hamcrest.Description
+import org.hamcrest.Matcher
 import org.w3c.dom.ls.LSResourceResolver
 
 import javax.xml.XMLConstants
@@ -88,5 +88,15 @@ class XmlXsdMatcher extends BaseMatcher<String> {
   @Override
   void describeTo(Description description) {
     description.appendText("the supplied XSD")
+  }
+
+  static Matcher<String> matchesXsdInClasspath(String path) {
+    notNull(path, "Path that points to the XSD in classpath")
+    InputStream stream = Thread.currentThread().getContextClassLoader().getResourceAsStream(path)
+    if (!stream) {
+      // Fallback if not found (this enables paths starting with slash)
+      stream = getClass().getResourceAsStream(path)
+    }
+    return matchesXsd(stream);
   }
 }
